rename patient dto mapper method